Atualiza hero com novo texto da SAD

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Secretaria de Administração e Gestão de Pessoas - SADGP — Seleção Simplificada Hospital Veterinário do Recife</title>
+    <title>Secretaria de Administração - SAD — Seleção Simplificada Hospital Veterinário do Recife</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -307,12 +307,14 @@
     <input type="hidden" id="uf" value="{{ $json.uf }}" />
     <header class="site-header">
       <div class="container">
-        <span class="badge-open">Secretaria de Administração e Gestão de Pessoas - SADGP • Recife</span>
+        <span class="badge-open">Secretaria de Administração - SAD • Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Seleção Simplificada Hospital Veterinário do Recife</h1>
         <p class="lead mt-2">
-          A Seleção Pública Simplificada oferta 41 vagas temporárias para profissionais que integrarão o Hospital Veterinário do Recife Professor
-          Robson José Gomes de Melo. A Secretaria de Administração e Gestão de Pessoas (SADGP) coordena o certame junto ao Gabinete de Proteção e
-          Defesa dos Animais, preservando os critérios técnicos e a continuidade do atendimento à população.
+          A SECRETARIA DE ADMINISTRAÇÃO e o GABINETE DE PROTEÇÃO E DEFESA DOS ANIMAIS, com fundamento no Decreto nº XXXXX, de XX de XXXXXXXX de 2025,
+          tornam pública a abertura da SELEÇÃO PÚBLICA SIMPLIFICADA destinada à contratação temporária de 41 (quarenta e um) profissionais, sendo 37
+          (trinta e sete) vagas para Analista em Saúde Animal – Veterinário, 02 (duas) vagas para Técnico em Saúde Animal – Radiologia e Imagenologia e
+          02 (duas) vagas para Auxiliar em Saúde Animal – Auxiliar Veterinário, para atuação no Hospital Veterinário do Recife Robson José Gomes de
+          Melo, vinculado ao Gabinete de Proteção e Defesa dos Animais, a fim de atender necessidade temporária de excepcional interesse público.
         </p>
       </div>
     </header>
@@ -512,7 +514,7 @@
 
     <footer class="bg-white border-top">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
-        <span>Secretaria de Administração e Gestão de Pessoas - SADGP — Prefeitura do Recife</span>
+        <span>Secretaria de Administração - SAD — Prefeitura do Recife</span>
         <span class="text-muted">© 2025 • Coordenadoria de Processos Seletivos</span>
       </div>
     </footer>
